nuevo vuelco de idea de la aplicacion

--- a/Basico/WebContent/publico/template/template-login.xhtml
+++ b/Basico/WebContent/publico/template/template-login.xhtml
@@ -22,7 +22,7 @@
 			</f:facet>
 
 			<title>
-			Login
+			Pagina de Inicio
 			</title>
 			<h:outputStylesheet name="css/styles.css" />
 		</h:head>
