--- a/Basico/WebContent/publico/views/buscar-mensaje.xhtml
+++ b/Basico/WebContent/publico/views/buscar-mensaje.xhtml
@@ -7,43 +7,13 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
-
-
-<f:view contentType="text/html">
-	<ui:insert name="metadata" />
-
-	<f:metadata>
-		<f:viewParam name="dummy" />
-	</f:metadata>
+	
 	<h:head>
-		<f:facet name="first">
-			<meta http-equiv="X-UA-Compatible" content="EmulateIE8" />
-			<meta content='text/html; charset=UTF-8' http-equiv="Content-Type" />
-		</f:facet>
-
-		<title>Busqueda de Mensajes del Usuario</title>
-		<h:outputStylesheet library="css" name="/styles.css" />
+	<h:outputStylesheet  library="css" name="/styles.css" />
 	</h:head>
-
-	<h:body>
+	
 		<p:layout fullPage="true">
-
-			<p:layoutUnit position="north" style="background-color:#d5e7b4"
-				minSize="100" styleClass="panelGreen">
-				<div class="h1">
-					<h1>Busqueda de Mensajes</h1>
-				</div>
-			</p:layoutUnit>
-			<p:layoutUnit position="west" resizable="true" size="200"
-				minSize="241" maxSize="400">
-
-				<ui:include src="/publico/comun/menu-nuevo.xhtml" />
-
-			</p:layoutUnit>
-
-			<p:layoutUnit position="center" style="border:0 ;background-color:#7c7e7e">
-				<p:layout fullPage="true">
-				
+				<p:layoutUnit position="north">
 				<h:form>
 					<p:fieldset legend="Filtro de Busqueda" style="margin-bottom:20px">
 					
@@ -57,22 +27,18 @@
 					</h:panelGrid>
 					</p:fieldset>
 				</h:form>
-         
-				
+         </p:layoutUnit>
+				<p:layoutUnit position="center">
 			<h:form id="tabla">		
 	   <p:growl id="msgs" showDetail="true"/>
 	 
 	   <p:dataTable id="mensaje" var="mensaje" value="#{mensajeBean.search()}" editable="true" style="margin-bottom:20px">
 	     <p:column>
-	     	<h:outputText value="#{mensaje.descripcion}" />
+	     	<h:outputText headerText="Descripcion" value="#{mensaje.descripcion}" />
 	     </p:column>
 	      
 	   </p:dataTable>
 	    </h:form>
-	          <p:layoutUnit position="south" style="background-color:#d5e7b4" />
+				</p:layoutUnit> 
 		</p:layout>
-		</p:layoutUnit>
-		</p:layout>
-	</h:body>
-</f:view>
-</html>
+	</html>
