--- a/Basico/WebContent/publico/views/lista-mensaje.xhtml
+++ b/Basico/WebContent/publico/views/lista-mensaje.xhtml
@@ -22,7 +22,7 @@
 			</f:facet>
 
 			<title>
-			Mensaje Creados por el Usuario
+			Listado de Mensaje
 			</title>
 			<h:outputStylesheet  library="css" name="/styles.css" />
 		</h:head>
@@ -32,7 +32,17 @@
         
         	<p:layoutUnit position="north" style="background-color:#d5e7b4" minSize="100" styleClass="panelGreen">
 				<div class="h1">
-					<h1>Mensaje del Usuario</h1>
+					<h1>Pagina Lista Mensajes</h1>
+				</div>
+				<div class="perfil">
+				Bienvenido :<h:outputText value="#{usuarioBean.username}"/>
+					<h:form>
+						<p:splitButton  styleClass="btnPerfil"  value="Usuario" actionListener="#{usuarioBean.username}">
+							<p:menuitem value="Cerrar Session" ajax="false" action="#{usuarioBean.logout}"/>
+							<p:separator/>
+							<p:menuitem value="Pagina Inicio" ajax="false" action="#{mensajeBean.volver}"/>
+						</p:splitButton>
+					</h:form>
 				</div>
 			</p:layoutUnit>
 			<p:layoutUnit position="west" resizable="true" size="200" minSize="241"
@@ -45,6 +55,7 @@
 		
 			
 				<p:layoutUnit position="center" style="border:0 ;background-color:#7c7e7e">
+				<p:fieldset legend="Tabla de Mensajes" style="margin-bottom:20px" id="leyendaTabla">
 			<h:form id="tabla">		
 	   <p:growl id="msgs" showDetail="true"/>
 	 
@@ -68,23 +79,51 @@
 	             <h:outputText value="#{mensaje.descripcion}" />
 	           
 	       </p:column>
+	       <p:column headerText="Fecha">
+	             <h:outputText value="#{mensaje.fecha}" />
+	           
+	       </p:column>
 	       <p:column style="width:32px">
-	            <p:commandLink value="Editar" action="#{mensajeBean.modificar()}">
+	            <p:commandLink action="#{mensajeBean.modificar()}"><p:graphicImage library="images" name="editar.jpg" styleClass="btnTable"/>
 	            <f:setPropertyActionListener target="#{mensajeBean.mensaje}" value="#{mensaje}" />
 	            </p:commandLink>      
 	       </p:column>
 	       <p:column style="width:32px">
-	       <p:commandLink value="Borrar" action="#{mensajeBean.borrar()}">
+	       <p:commandLink action="#{mensajeBean.borrar()}"><p:graphicImage library="images" name="borrar.jpg" styleClass="btnTable"/>
 	            <f:setPropertyActionListener target="#{mensajeBean.mensaje}" value="#{mensaje}" />
 	            </p:commandLink>      
 	       </p:column>
 	       <p:column style="width:32px">
-	       <p:commandLink value="Guardar" action="#{mensajeBean.guardar()}">
+	       <p:commandLink oncomplete="carOP.show()" >
+	       <p:graphicImage library="images" name="search.png" styleClass="btnTable" />
 	            <f:setPropertyActionListener target="#{mensajeBean.mensaje}" value="#{mensaje}" />
 	            </p:commandLink>      
 	       </p:column>
 	   </p:dataTable>
+	   
+	   
 	    </h:form>
+	    </p:fieldset>
+	    <p:fieldset legend="Dialog" style="margin-bottom:20px">
+	    <h:panelGrid columns="1" cellpadding="5">
+    
+ 
+    		<p:commandButton value="Modal" type="button" onclick="PF('dlg2').show();" />
+ 
+   
+		</h:panelGrid>
+	    <p:dialog header="Dialog de Mensajes" widgetVar="dlg2" modal="true" height="100" appendTo="@(body)">
+             <h:form>
+                     <p:outputLabel value="Escriba una descripcion: "/>
+					 <p:inputText value="#{mensajeBean.descripcion}"></p:inputText>
+					 <p:outputLabel for="button" value="Fecha del Mensaje:" />
+        			 <p:calendar id="button" value="#{mensajeBean.date3}" showOn="button" />
+        			 <div class="Añadir">
+					 <p:commandButton value="Añadir Mensaje" actionListener="#{mensajeBean.addMensaje()}" oncomplete="dlg2.hide()" update=":leyendaTabla"></p:commandButton>
+					 </div>
+				</h:form>	 
+        </p:dialog>   
+        </p:fieldset>
 			</p:layoutUnit>
 			<p:layoutUnit position="south" style="background-color:#d5e7b4"/>
         </p:layout>	
