--- a/Basico/WebContent/publico/views/index.xhtml
+++ b/Basico/WebContent/publico/views/index.xhtml
@@ -42,12 +42,12 @@
 					
 					<h:panelGroup></h:panelGroup>
 					<h:panelGrid columns="2">
-					<p:commandLink id="acceso" style="margin-right:10px;" ajax="false" action="#{Login.acceso()}">
+					<p:commandLink id="acceso" style="margin-right:10px;" ajax="false" action="#{Login.acceso}">
 					<h:outputText value="Solicitar Acceso"/>
     				</p:commandLink>
     				
     				
-					<p:commandLink id="registro"  ajax="false" action="#{Login.registro()}">
+					<p:commandLink id="registro"  ajax="false" action="#{Login.registro}">
 					<h:outputText value="Registrate" />
     				</p:commandLink>
     				
